@@ -26,7 +26,6 @@ import org.apache.kafka.common.protocol.SendBuilder;
 
 import java.nio.ByteBuffer;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -65,7 +64,7 @@ public abstract class AbstractResponse implements AbstractRequestResponse {
     public abstract Map<Errors, Integer> errorCounts();
 
     protected static Map<Errors, Integer> errorCounts(Errors error) {
-        return Collections.singletonMap(error, 1);
+        return Map.of(error, 1);
     }
 
     protected static Map<Errors, Integer> errorCounts(Stream<Errors> errors) {
