@@ -25,11 +25,10 @@ import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.ObjectSerializationCache;
 import org.apache.kafka.common.protocol.Readable;
-import org.apache.kafka.common.record.MemoryRecords;
-import org.apache.kafka.common.record.Records;
+import org.apache.kafka.common.record.internal.MemoryRecords;
+import org.apache.kafka.common.record.internal.Records;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -105,7 +104,7 @@ public class ShareFetchResponse extends AbstractResponse {
     /**
      * Creates a {@link org.apache.kafka.common.requests.ShareFetchResponse} from the given byte buffer.
      * Unlike {@link org.apache.kafka.common.requests.ShareFetchResponse#of(Errors, int, LinkedHashMap, List, int)},
-     * this method doesn't convert null records to {@link org.apache.kafka.common.record.MemoryRecords#EMPTY}.
+     * this method doesn't convert null records to {@link org.apache.kafka.common.record.internal.MemoryRecords#EMPTY}.
      *
      * <p><strong>This method should only be used in client-side.</strong></p>
      */
@@ -139,7 +138,7 @@ public class ShareFetchResponse extends AbstractResponse {
                              Iterator<Map.Entry<TopicIdPartition, ShareFetchResponseData.PartitionData>> partIterator) {
         // Since the throttleTimeMs and metadata field sizes are constant and fixed, we can
         // use arbitrary values here without affecting the result.
-        ShareFetchResponseData data = toMessage(Errors.NONE, 0, partIterator, Collections.emptyList(), 0);
+        ShareFetchResponseData data = toMessage(Errors.NONE, 0, partIterator, List.of(), 0);
         ObjectSerializationCache cache = new ObjectSerializationCache();
         return 4 + data.size(cache, version);
     }
@@ -153,7 +152,7 @@ public class ShareFetchResponse extends AbstractResponse {
 
     /**
      * Creates a {@link org.apache.kafka.common.requests.ShareFetchResponse} from the given data.
-     * This method converts null records to {@link org.apache.kafka.common.record.MemoryRecords#EMPTY}
+     * This method converts null records to {@link org.apache.kafka.common.record.internal.MemoryRecords#EMPTY}
      * to ensure consistent record representation in the response.
      *
      * <p><strong>This method should only be used in server-side.</strong></p>
